Fix Addfav visible on context menu

--- a/www/css/panels.css
+++ b/www/css/panels.css
@@ -447,7 +447,6 @@ body.cv #screen-saver/*, body.cv #menu-bottom*/ {display:block !important;}
 body.cvpb #playbar {box-shadow:none;color:#eee;}
 body.cvpb #playbar-timeline {top:50%;width:35%;transform:translate(-50%, -50%);}
 body.cvpb #cv-playlist-btn {display:block;}
-body.cvpb #addfav-li {display:none;}
 body.cvpb #random-album {display:none!important;}
 body.cvpb #playbar-toggles .addfav {display:block!important;}
 #cv-playlist {display:none;position:absolute;top:1.5em;right:.1em;width:40vmin;z-index:2;height:calc(100% - 2.75em - 45px);overflow:auto;-webkit-overflow-scrolling:touch;backdrop-filter:blur(10px);-webkit-backdrop-filter:blur(10px);background:rgba(32,32,32,.25);}
